moved smiley-menu more to the left. should no longer open outside of screen on small screens

--- a/client/style.css
+++ b/client/style.css
@@ -131,7 +131,7 @@ button{
   text-align: center;
   position: absolute;
   bottom: 105%;
-  left: -2.5rem;
+  left: -3.45rem;
   background-color: #EFEFEF;
   width: 12rem;
   flex-wrap: wrap;
